samples/_failures_safe/1761510659_314fbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbb96c4e.c: In function ‘main’:
./samples/SAFE/__tmp_cbb96c4e.c:167:5: error: expected declaration or statement at end of input
  167 |     if (!validate_graph_input(nodes, edges)) {
      |     ^~
./samples/SAFE/__tmp_cbb96c4e.c:167:5: error: expected declaration or statement at end of input
